# Sm_elvira

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
bot/: __main__.py  app.py  config.py  constants.py  context.py  db.py  keyboards.py  logging_config.py  metrics.py  models.py  states.py
bot/middlewares/: __init__.py  metrics.py
bot/services/: files.py  photos.py  reports.py
bot/utils/: photos.py
deploy/: grafana-dashboards.yml  prometheus.yml
deploy/dashboards/: order-bot-overview.json
docs/: admin-guide.txt  flowchart.drawio  tech-doc.txt  user-guide.txt
